# rust-axum-redis

./: Cargo.toml  Dockerfile  README.md
config/: default.toml
src/: main.rs
src/controller/: mod.rs  redis_controller.rs
src/model/: api.rs  mod.rs  service_config.rs  service_state.rs
src/service/: error.rs  mod.rs  redis_service.rs
