[package]
name = "rust-axum-redis"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7", features = ["default"] }
tower-http = { version = "0.5.2", features = ["full"] }

serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-logstash = "0.7"

redis = "0.26"
bb8-redis = "0.16"

strum = "0.26"
strum_macros = "0.26"

config = "0.14.0"